added new hooks and services and more

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@ html {
 
 body {
   font-family: "Open Sans", sans-serif; /* Apply Open Sans font to the body */
+  background-color: #6565656a;
 }
 
 ::-webkit-scrollbar {
